More info -> Official Website

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ to start."
             <a href="https://www.linkedin.com/in/aviralgarg/" target="_blank" rel="noopener noreferrer">LinkedIn</a> | <a href="https://github.com/aviral-garg" target="_blank" rel="noopener noreferrer">GitHub</a> | <a href="mailto:contact@aviralgarg.com" target="_blank" rel="noopener noreferrer">contact@aviralgarg.com</a>
           </p>
           <p>
-            HoloBrain: <a href="https://github.com/aviral-garg/Holobrain" target="_blank" rel="noopener noreferrer">GitHub</a> | <a href="http://eml.ubc.ca/eml-hive/holobrain/" target="_blank" rel="noopener noreferrer">More Info</a><br />
+            HoloBrain: <a href="https://github.com/aviral-garg/Holobrain" target="_blank" rel="noopener noreferrer">GitHub</a> | <a href="http://eml.ubc.ca/eml-hive/holobrain/" target="_blank" rel="noopener noreferrer">Official Website</a><br />
             CodeSiren: <a href="https://github.com/aviral-garg/codeSirensWeb" target="_blank" rel="noopener noreferrer">GitHub</a> | <a href="http://aviral-garg.github.io/codeSirensWeb/" target="_blank" rel="noopener noreferrer">Proof of Concept</a><br />
             AppledoreVR: <a href="https://github.com/aviral-garg/Appledore-VR" target="_blank" rel="noopener noreferrer">GitHub</a> | <a href="http://www.youtube.com/watch?v=-xQAiO2_m1Y" target="_blank" rel="noopener noreferrer">Demo Video</a><br />
             React-ChatBot: <a href="https://github.com/aviral-garg/React-Chatbot" target="_blank" rel="noopener noreferrer">GitHub</a> | <a href="https://react-knowledgebank-bot.azurewebsites.net/" target="_blank" rel="noopener noreferrer"> Prototype </a><br />
