Link to Kiara-Python command list

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@ to start."
             <tr>
               <td>Kiara-Python:</td>
               <td><a href="https://github.com/aviral-garg/Kiara" target="_blank" rel="noopener noreferrer">GitHub</a></td>
+              <td><a href="https://github.com/aviral-garg/Kiara-Python#voice-commands" target="_blank" rel="noopener noreferrer">Command List</a></td>
             </tr>
           </table>
           <p>
 
-
             <!-- ChatBots similar to 2 created a T4G -->
-<!-- Reference: <a href="http://www.getskeleton.com">Skeleton documentation</a>. -->
+            <!-- Reference: <a href="http://www.getskeleton.com">Skeleton documentation</a>. -->
 
           </p>
         </div>
