--- a/index.html
+++ b/index.html
@@ -50,17 +50,45 @@ to start."
           <div class="nameTitle">AVIRAL GARG</div>
           <div class="nameSubTitle">SOFTWARE ENGINEER</div>
           <p>
+
             <a href="https://www.linkedin.com/in/aviralgarg/" target="_blank" rel="noopener noreferrer">LinkedIn</a> | <a href="https://github.com/aviral-garg" target="_blank" rel="noopener noreferrer">GitHub</a> | <a href="mailto:contact@aviralgarg.com" target="_blank" rel="noopener noreferrer">contact@aviralgarg.com</a>
           </p>
+          <table border="0">
+            <tr>
+              <td>HoloBrain:</td>
+              <td><a href="https://github.com/aviral-garg/Holobrain" target="_blank" rel="noopener noreferrer">GitHub</a></td>
+              <td><a href="http://eml.ubc.ca/eml-hive/holobrain/" target="_blank" rel="noopener noreferrer">Official Website</a></td>
+            </tr>
+
+            <tr>
+              <td>CodeSiren:</td>
+              <td><a href="https://github.com/aviral-garg/codeSirensWeb" target="_blank" rel="noopener noreferrer">GitHub</a></td>
+              <td><a href="http://aviral-garg.github.io/codeSirensWeb/" target="_blank" rel="noopener noreferrer">Proof of Concept</a></td>
+            </tr>
+
+            <tr>
+              <td>AppledoreVR:</td>
+              <td><a href="https://github.com/aviral-garg/Appledore-VR" target="_blank" rel="noopener noreferrer">GitHub</a></td>
+              <td><a href="http://www.youtube.com/watch?v=-xQAiO2_m1Y" target="_blank" rel="noopener noreferrer">Demo Video</a></td>
+            </tr>
+
+            <tr>
+              <td>React-ChatBot:</td>
+              <td><a href="https://github.com/aviral-garg/React-Chatbot" target="_blank" rel="noopener noreferrer">GitHub</a></td>
+              <td><a href="https://react-knowledgebank-bot.azurewebsites.net/" target="_blank" rel="noopener noreferrer"> Prototype</a></td>
+            </tr>
+
+            <tr>
+              <td>Kiara-Python:</td>
+              <td><a href="https://github.com/aviral-garg/Kiara" target="_blank" rel="noopener noreferrer">GitHub</a></td>
+            </tr>
+          </table>
           <p>
-            HoloBrain: <a href="https://github.com/aviral-garg/Holobrain" target="_blank" rel="noopener noreferrer">GitHub</a> | <a href="http://eml.ubc.ca/eml-hive/holobrain/" target="_blank" rel="noopener noreferrer">Official Website</a><br />
-            CodeSiren: <a href="https://github.com/aviral-garg/codeSirensWeb" target="_blank" rel="noopener noreferrer">GitHub</a> | <a href="http://aviral-garg.github.io/codeSirensWeb/" target="_blank" rel="noopener noreferrer">Proof of Concept</a><br />
-            AppledoreVR: <a href="https://github.com/aviral-garg/Appledore-VR" target="_blank" rel="noopener noreferrer">GitHub</a> | <a href="http://www.youtube.com/watch?v=-xQAiO2_m1Y" target="_blank" rel="noopener noreferrer">Demo Video</a><br />
-            React-ChatBot: <a href="https://github.com/aviral-garg/React-Chatbot" target="_blank" rel="noopener noreferrer">GitHub</a> | <a href="https://react-knowledgebank-bot.azurewebsites.net/" target="_blank" rel="noopener noreferrer"> Prototype </a><br />
-            Kiara-Python: <a href="https://github.com/aviral-garg/Kiara" target="_blank" rel="noopener noreferrer">GitHub</a><br />
+
+
             <!-- ChatBots similar to 2 created a T4G -->
 <!-- Reference: <a href="http://www.getskeleton.com">Skeleton documentation</a>. -->
-            
+
           </p>
         </div>
       </div>
