--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@ to start."
             <a href="https://www.linkedin.com/in/aviralgarg/" target="_blank" rel="noopener noreferrer">LinkedIn</a> | <a href="https://github.com/aviral-garg" target="_blank" rel="noopener noreferrer">GitHub</a> | <a href="mailto:contact@aviralgarg.com" target="_blank" rel="noopener noreferrer">contact@aviralgarg.com</a>
           </p>
           <p>
-            HoloBrain: <a href="http://github.com/aviral-garg/Holobrain" target="_blank" rel="noopener noreferrer">github</a> <a href="http://eml.ubc.ca/eml-hive/holobrain/" target="_blank" rel="noopener noreferrer">More Info</a><br />
-            CodeSiren: <a href="http://github.com/aviral-garg/codeSirensWeb" target="_blank" rel="noopener noreferrer">github</a> <a href="http://aviral-garg.github.io/codeSirensWeb/" target="_blank" rel="noopener noreferrer">Demo Website</a><br />
-            AppledoreVR: <a href="http://github.com/aviral-garg/Appledore-VR" target="_blank" rel="noopener noreferrer">github</a> <a href="http://www.youtube.com/watch?v=-xQAiO2_m1Y" target="_blank" rel="noopener noreferrer">Demo Video</a>
-<!--             This index.html page is a placeholder with the CSS, font and
-            favicon. It's just waiting for you to add some content! If you need
-            some help hit up the
-            <a href="http://www.getskeleton.com">Skeleton documentation</a>. -->
+            HoloBrain: <a href="https://github.com/aviral-garg/Holobrain" target="_blank" rel="noopener noreferrer">GitHub</a> <a href="http://eml.ubc.ca/eml-hive/holobrain/" target="_blank" rel="noopener noreferrer">More Info</a><br />
+            CodeSiren: <a href="https://github.com/aviral-garg/codeSirensWeb" target="_blank" rel="noopener noreferrer">GitHub</a> <a href="http://aviral-garg.github.io/codeSirensWeb/" target="_blank" rel="noopener noreferrer">Demo Website</a><br />
+            AppledoreVR: <a href="https://github.com/aviral-garg/Appledore-VR" target="_blank" rel="noopener noreferrer">GitHub</a> <a href="http://www.youtube.com/watch?v=-xQAiO2_m1Y" target="_blank" rel="noopener noreferrer">Demo Video</a><br />
+            React-ChatBot: <a href="https://github.com/aviral-garg/React-Chatbot" target="_blank" rel="noopener noreferrer">GitHub</a><br />
+            Kiara-Python: <a href="https://github.com/aviral-garg/Kiara" target="_blank" rel="noopener noreferrer">GitHub</a><br />
+            <!-- ChatBots similar to 2 created a T4G -->
+<!-- Reference: <a href="http://www.getskeleton.com">Skeleton documentation</a>. -->
           </p>
         </div>
       </div>
