minor style changes

--- a/index.html
+++ b/index.html
@@ -46,13 +46,19 @@ to start."
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div class="container">
       <div class="row">
-        <div class="one-half column" style="margin-top: 25%">
+        <div class="one-half column" style="margin-top: 20%">
           <div class="nameTitle">AVIRAL GARG</div>
           <div class="nameSubTitle">SOFTWARE ENGINEER</div>
           <p>
-            <a href="https://drive.google.com/file/d/1OrhEGE7YZ8NeHqcXO9zxwoq4DNFKF7H6/view?usp=sharing" target="_blank" rel="noopener noreferrer">Resume</a> | <a href="https://www.linkedin.com/in/aviralgarg/" target="_blank" rel="noopener noreferrer">LinkedIn</a> | <a href="https://github.com/aviral-garg" target="_blank" rel="noopener noreferrer">GitHub</a> | <a href="mailto:contact@aviralgarg.com" target="_blank" rel="noopener noreferrer">contact@aviralgarg.com</a>
+            <a href="https://drive.google.com/file/d/1OrhEGE7YZ8NeHqcXO9zxwoq4DNFKF7H6/view?usp=sharing" target="_blank" rel="noopener noreferrer">Resume</a>
+            &nbsp;|&nbsp;
+            <a href="https://www.linkedin.com/in/aviralgarg/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+            &nbsp;|&nbsp;
+            <a href="https://github.com/aviral-garg" target="_blank" rel="noopener noreferrer">GitHub</a>
+            &nbsp;|&nbsp;
+            <a href="mailto:contact@aviralgarg.com" target="_blank" rel="noopener noreferrer">contact@aviralgarg.com</a>
           </p>
-          <table border="0">
+          <table>
             <tr>
               <td>React-ChatBot:</td>
               <td><a href="https://github.com/aviral-garg/react-chatbot-2" target="_blank" rel="noopener noreferrer">GitHub</a></td>
@@ -94,3 +100,4 @@ to start."
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   </body>
 </html>
+
