+ openCV & lang/tech todo

--- a/index.html
+++ b/index.html
@@ -92,6 +92,37 @@ to start."
             <!-- ChatBots similar to 2 created a T4G -->
             <!-- Reference: <a href="http://www.getskeleton.com">Skeleton documentation</a>. -->
           </p>
+                    <td>AppledoreVR:</td>
+                    <td><a href="https://github.com/aviral-garg/Appledore-VR" rel="noopener noreferrer" target="_blank">GitHub</a>
+                    </td>
+                    <td><a href="http://www.youtube.com/watch?v=-xQAiO2_m1Y" rel="noopener noreferrer" target="_blank">Demo
+                        Video</a></td>
+                    <!--                    TODO: Languages/Tech-->
+                    <!--                    <td>UnityC#-->
+                    <!--                    </td>-->
+                    <!--                    <td>NodeJS-->
+                    <!--                    </td>-->
+                    <!--                    <td>Java-->
+                    <!--                    </td>-->
+                </tr>
+                <tr>
+                    <td>OpenCV-Python:</td>
+                    <td><a href="https://github.com/aviral-garg/openCV" rel="noopener noreferrer"
+                           target="_blank">GitHub</a>
+                    </td>
+                    <td><a href="https://github.com/aviral-garg/openCV#learning-objectives" rel="noopener noreferrer"
+                           target="_blank">Objectives</a>
+                    </td>
+                    <!--                    <td>Python-->
+                    <!--                    </td>-->
+                    <!--                    <td>OpenCV-->
+                    <!--                    </td>-->
+                </tr>
+            </table>
+            <p>
+                <!-- ChatBots similar to 2 created a T4G -->
+                <!-- Reference: <a href="http://www.getskeleton.com">Skeleton documentation</a>. -->
+            </p>
         </div>
       </div>
     </div>
