idea dictionary & index.html refactor

--- a/index.html
+++ b/index.html
@@ -1,97 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>Aviral Garg</title>
     <meta
-      name="description"
-      content="Everything you need to know about Aviral Garg. Or, at least a good place
+            content="Everything you need to know about Aviral Garg. Or, at least a good place
 to start."
+            name="description"
     />
-    <meta name="author" content="Aviral Garg" />
+    <meta content="Aviral Garg" name="author"/>
 
     <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
 
     <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link
-      href="//fonts.googleapis.com/css?family=Raleway:400,300,600"
-      rel="stylesheet"
-      type="text/css"
+            href="//fonts.googleapis.com/css?family=Raleway:400,300,600"
+            rel="stylesheet"
+            type="text/css"
     />
     <link
-      href="//fonts.googleapis.com/css?family=Playfair+Display"
-      rel="stylesheet"
+            href="//fonts.googleapis.com/css?family=Playfair+Display"
+            rel="stylesheet"
     />
 
     <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/skeleton.css" />
+    <link href="css/normalize.css" rel="stylesheet"/>
+    <link href="css/skeleton.css" rel="stylesheet"/>
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link
-      rel="icon"
-      type="image/png"
-      href="resources/images/a.PNG"
+            href="resources/images/a.PNG"
+            rel="icon"
+            type="image/png"
     />
-  </head>
-  <body>
-    <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <div class="container">
-      <div class="row">
+</head>
+<body>
+<!-- Primary Page Layout
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<div class="container">
+    <div class="row">
         <div class="one-half column" style="margin-top: 20%">
-          <div class="nameTitle">AVIRAL GARG</div>
-          <div class="nameSubTitle">SOFTWARE ENGINEER</div>
-          <p>
-            <a href="https://drive.google.com/file/d/1OrhEGE7YZ8NeHqcXO9zxwoq4DNFKF7H6/view?usp=sharing" target="_blank" rel="noopener noreferrer">Resume</a>
-            &nbsp;|&nbsp;
-            <a href="https://www.linkedin.com/in/aviralgarg/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-            &nbsp;|&nbsp;
-            <a href="https://github.com/aviral-garg" target="_blank" rel="noopener noreferrer">GitHub</a>
-            &nbsp;|&nbsp;
-            <a href="mailto:contact@aviralgarg.com" target="_blank" rel="noopener noreferrer">contact@aviralgarg.com</a>
-          </p>
-          <table>
-            <tr>
-              <td>React-ChatBot:</td>
-              <td><a href="https://github.com/aviral-garg/react-chatbot-2" target="_blank" rel="noopener noreferrer">GitHub</a></td>
-              <td><a href="https://react-knowledgebank-bot.azurewebsites.net/" target="_blank" rel="noopener noreferrer">
-                  Prototype</a></td>
-            </tr>
-            <tr>
-              <td>Kiara-Python:</td>
-              <td><a href="https://github.com/aviral-garg/Kiara" target="_blank" rel="noopener noreferrer">GitHub</a></td>
-              <td><a href="https://github.com/aviral-garg/Kiara-Python#voice-commands" target="_blank"
-                  rel="noopener noreferrer">Command List</a></td>
-            </tr>
-            <tr>
-              <td>CodeSiren:</td>
-              <td><a href="https://github.com/aviral-garg/codeSirensWeb" target="_blank" rel="noopener noreferrer">GitHub</a></td>
-              <td><a href="http://aviral-garg.github.io/codeSirensWeb/" target="_blank" rel="noopener noreferrer">Proof of Concept</a></td>
-            </tr>
-            <tr>
-              <td>HoloBrain:</td>
-              <td><a href="https://github.com/aviral-garg/Holobrain" target="_blank" rel="noopener noreferrer">GitHub</a></td>
-              <td><a href="http://eml.ubc.ca/eml-hive/holobrain/" target="_blank" rel="noopener noreferrer">Official Website</a>
-              </td>
-            </tr>
-            <tr>
-              <td>AppledoreVR:</td>
-              <td><a href="https://github.com/aviral-garg/Appledore-VR" target="_blank" rel="noopener noreferrer">GitHub</a></td>
-              <td><a href="http://www.youtube.com/watch?v=-xQAiO2_m1Y" target="_blank" rel="noopener noreferrer">Demo Video</a></td>
-            </tr>
-          </table>
-          <p>
-            <!-- ChatBots similar to 2 created a T4G -->
-            <!-- Reference: <a href="http://www.getskeleton.com">Skeleton documentation</a>. -->
-          </p>
+            <div class="nameTitle">AVIRAL GARG</div>
+            <div class="nameSubTitle">SOFTWARE ENGINEER</div>
+            <p>
+                <a href="https://drive.google.com/file/d/1OrhEGE7YZ8NeHqcXO9zxwoq4DNFKF7H6/view?usp=sharing"
+                   rel="noopener noreferrer" target="_blank">Resume</a>
+                &nbsp;|&nbsp;
+                <a href="https://www.linkedin.com/in/aviralgarg/" rel="noopener noreferrer" target="_blank">LinkedIn</a>
+                &nbsp;|&nbsp;
+                <a href="https://github.com/aviral-garg" rel="noopener noreferrer" target="_blank">GitHub</a>
+                &nbsp;|&nbsp;
+                <a href="mailto:contact@aviralgarg.com" rel="noopener noreferrer"
+                   target="_blank">contact@aviralgarg.com</a>
+            </p>
+            <table>
+                <tr>
+                    <td>React-ChatBot:</td>
+                    <td><a href="https://github.com/aviral-garg/react-chatbot-2" rel="noopener noreferrer"
+                           target="_blank">GitHub</a></td>
+                    <td><a href="https://react-knowledgebank-bot.azurewebsites.net/" rel="noopener noreferrer"
+                           target="_blank">
+                        Prototype</a></td>
+                </tr>
+                <tr>
+                    <td>Kiara-Python:</td>
+                    <td><a href="https://github.com/aviral-garg/Kiara" rel="noopener noreferrer"
+                           target="_blank">GitHub</a></td>
+                    <td><a href="https://github.com/aviral-garg/Kiara-Python#voice-commands" rel="noopener noreferrer"
+                           target="_blank">Command List</a></td>
+                </tr>
+                <tr>
+                    <td>CodeSiren:</td>
+                    <td><a href="https://github.com/aviral-garg/codeSirensWeb" rel="noopener noreferrer"
+                           target="_blank">GitHub</a></td>
+                    <td><a href="http://aviral-garg.github.io/codeSirensWeb/" rel="noopener noreferrer" target="_blank">Proof
+                        of Concept</a></td>
+                </tr>
+                <tr>
+                    <td>HoloBrain:</td>
+                    <td><a href="https://github.com/aviral-garg/Holobrain" rel="noopener noreferrer" target="_blank">GitHub</a>
+                    </td>
+                    <td><a href="http://eml.ubc.ca/eml-hive/holobrain/" rel="noopener noreferrer" target="_blank">Official
+                        Website</a>
+                    </td>
+                </tr>
+                <tr>
                     <td>AppledoreVR:</td>
                     <td><a href="https://github.com/aviral-garg/Appledore-VR" rel="noopener noreferrer" target="_blank">GitHub</a>
                     </td>
@@ -124,11 +124,11 @@ to start."
                 <!-- Reference: <a href="http://www.getskeleton.com">Skeleton documentation</a>. -->
             </p>
         </div>
-      </div>
     </div>
+</div>
 
-    <!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  </body>
+<!-- End Document
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
 </html>
 
