--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ to start."
             </p>
             <table>
                 <tr>
-                    <td>React-ChatBot:</td>
+                    <td>React-ChatBot</td>
                     <td><a href="https://github.com/aviral-garg/react-chatbot-2" rel="noopener noreferrer"
                            target="_blank">GitHub</a></td>
                     <td><a href="https://react-knowledgebank-bot.azurewebsites.net/" rel="noopener noreferrer"
@@ -70,21 +70,21 @@ to start."
                         Prototype</a></td>
                 </tr>
                 <tr>
-                    <td>Kiara-Python:</td>
+                    <td>Kiara-Python</td>
                     <td><a href="https://github.com/aviral-garg/Kiara" rel="noopener noreferrer"
                            target="_blank">GitHub</a></td>
                     <td><a href="https://github.com/aviral-garg/Kiara-Python#voice-commands" rel="noopener noreferrer"
                            target="_blank">Command List</a></td>
                 </tr>
                 <tr>
-                    <td>CodeSiren:</td>
+                    <td>CodeSiren</td>
                     <td><a href="https://github.com/aviral-garg/codeSirensWeb" rel="noopener noreferrer"
                            target="_blank">GitHub</a></td>
                     <td><a href="http://aviral-garg.github.io/codeSirensWeb/" rel="noopener noreferrer" target="_blank">Proof
                         of Concept</a></td>
                 </tr>
                 <tr>
-                    <td>HoloBrain:</td>
+                    <td>HoloBrain</td>
                     <td><a href="https://github.com/aviral-garg/Holobrain" rel="noopener noreferrer" target="_blank">GitHub</a>
                     </td>
                     <td><a href="http://eml.ubc.ca/eml-hive/holobrain/" rel="noopener noreferrer" target="_blank">Official
@@ -92,7 +92,7 @@ to start."
                     </td>
                 </tr>
                 <tr>
-                    <td>AppledoreVR:</td>
+                    <td>AppledoreVR</td>
                     <td><a href="https://github.com/aviral-garg/Appledore-VR" rel="noopener noreferrer" target="_blank">GitHub</a>
                     </td>
                     <td><a href="http://www.youtube.com/watch?v=-xQAiO2_m1Y" rel="noopener noreferrer" target="_blank">Demo
@@ -106,7 +106,7 @@ to start."
                     <!--                    </td>-->
                 </tr>
                 <tr>
-                    <td>OpenCV-Python:</td>
+                    <td>OpenCV-Python</td>
                     <td><a href="https://github.com/aviral-garg/openCV" rel="noopener noreferrer"
                            target="_blank">GitHub</a>
                     </td>
@@ -116,6 +116,19 @@ to start."
                     <!--                    <td>Python-->
                     <!--                    </td>-->
                     <!--                    <td>OpenCV-->
+                    <!--                    </td>-->
+                </tr>
+                <tr>
+                    <td>Voice Code</td>
+                    <td><a href="https://github.com/aviral-garg/voice_code#voice_code" rel="noopener noreferrer"
+                           target="_blank">GitHub</a>
+                    </td>
+                    <td><a href="https://github.com/aviral-garg/voice_code/releases/" rel="noopener noreferrer"
+                           target="_blank">Download App</a>
+                    </td>
+                    <!--                    <td>Kotlin-->
+                    <!--                    </td>-->
+                    <!--                    <td>Jetpack-Compose-->
                     <!--                    </td>-->
                 </tr>
             </table>
