--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ to start."
                 &nbsp;|&nbsp;
                 <a href="https://github.com/aviral-garg" rel="noopener noreferrer" target="_blank">GitHub</a>
                 &nbsp;|&nbsp;
-                <a href="mailto:contact@aviralgarg.com" rel="noopener noreferrer"
+                <a href="mailto:aviral.garg@icloud.com" rel="noopener noreferrer"
                    target="_blank">contact@aviralgarg.com</a>
             </p>
             <table>
