--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ to start."
                 <a href="https://github.com/aviral-garg" rel="noopener noreferrer" target="_blank">GitHub</a>
                 &nbsp;|&nbsp;
                 <a href="mailto:aviral.garg@icloud.com" rel="noopener noreferrer"
-                   target="_blank">contact@aviralgarg.com</a>
+                   target="_blank">aviral.garg@icloud.com</a>
             </p>
             <table>
                 <tr>
