Rename github handle

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@ to start."
                 &nbsp;|&nbsp;
                 <a href="https://www.linkedin.com/in/aviralgarg/" rel="noopener noreferrer" target="_blank">LinkedIn</a>
                 &nbsp;|&nbsp;
-                <a href="https://github.com/aviral-garg" rel="noopener noreferrer" target="_blank">GitHub</a>
+                <a href="https://github.com/gaviral" rel="noopener noreferrer" target="_blank">GitHub</a>
             </p>
             <table>
                 <tr>
                     <td>React-ChatBot</td>
-                    <td><a href="https://github.com/aviral-garg/react-chatbot-2" rel="noopener noreferrer"
+                    <td><a href="https://github.com/gaviral/react-chatbot-2" rel="noopener noreferrer"
                            target="_blank">GitHub</a></td>
                     <td><a href="https://react-knowledgebank-bot.azurewebsites.net/" rel="noopener noreferrer"
                            target="_blank">
@@ -68,21 +68,21 @@ to start."
                 </tr>
                 <tr>
                     <td>Kiara-Python</td>
-                    <td><a href="https://github.com/aviral-garg/Kiara" rel="noopener noreferrer"
+                    <td><a href="https://github.com/gaviral/Kiara" rel="noopener noreferrer"
                            target="_blank">GitHub</a></td>
-                    <td><a href="https://github.com/aviral-garg/Kiara-Python#voice-commands" rel="noopener noreferrer"
+                    <td><a href="https://github.com/gaviral/Kiara-Python#voice-commands" rel="noopener noreferrer"
                            target="_blank">Command List</a></td>
                 </tr>
                 <tr>
                     <td>CodeSiren</td>
-                    <td><a href="https://github.com/aviral-garg/codeSirensWeb" rel="noopener noreferrer"
+                    <td><a href="https://github.com/gaviral/codeSirensWeb" rel="noopener noreferrer"
                            target="_blank">GitHub</a></td>
-                    <td><a href="http://aviral-garg.github.io/codeSirensWeb/" rel="noopener noreferrer" target="_blank">Proof
+                    <td><a href="http://gaviral.github.io/codeSirensWeb/" rel="noopener noreferrer" target="_blank">Proof
                         of Concept</a></td>
                 </tr>
                 <tr>
                     <td>HoloBrain</td>
-                    <td><a href="https://github.com/aviral-garg/Holobrain" rel="noopener noreferrer" target="_blank">GitHub</a>
+                    <td><a href="https://github.com/gaviral/Holobrain" rel="noopener noreferrer" target="_blank">GitHub</a>
                     </td>
                     <td><a href="http://eml.ubc.ca/eml-hive/holobrain/" rel="noopener noreferrer" target="_blank">Official
                         Website</a>
@@ -90,7 +90,7 @@ to start."
                 </tr>
                 <tr>
                     <td>AppledoreVR</td>
-                    <td><a href="https://github.com/aviral-garg/Appledore-VR" rel="noopener noreferrer" target="_blank">GitHub</a>
+                    <td><a href="https://github.com/gaviral/Appledore-VR" rel="noopener noreferrer" target="_blank">GitHub</a>
                     </td>
                     <td><a href="http://www.youtube.com/watch?v=-xQAiO2_m1Y" rel="noopener noreferrer" target="_blank">Demo
                         Video</a></td>
@@ -104,10 +104,10 @@ to start."
                 </tr>
                 <tr>
                     <td>OpenCV-Python</td>
-                    <td><a href="https://github.com/aviral-garg/openCV" rel="noopener noreferrer"
+                    <td><a href="https://github.com/gaviral/openCV" rel="noopener noreferrer"
                            target="_blank">GitHub</a>
                     </td>
-                    <td><a href="https://github.com/aviral-garg/openCV#learning-objectives" rel="noopener noreferrer"
+                    <td><a href="https://github.com/gaviral/openCV#learning-objectives" rel="noopener noreferrer"
                            target="_blank">Objectives</a>
                     </td>
                     <!--                    <td>Python-->
@@ -117,10 +117,10 @@ to start."
                 </tr>
                 <tr>
                     <td>Voice Code</td>
-                    <td><a href="https://github.com/aviral-garg/voice_code#voice_code" rel="noopener noreferrer"
+                    <td><a href="https://github.com/gaviral/voice_code#voice_code" rel="noopener noreferrer"
                            target="_blank">GitHub</a>
                     </td>
-                    <td><a href="https://github.com/aviral-garg/voice_code/releases/" rel="noopener noreferrer"
+                    <td><a href="https://github.com/gaviral/voice_code/releases/" rel="noopener noreferrer"
                            target="_blank">Download App</a>
                     </td>
                     <!--                    <td>Kotlin-->
