Removed old resume

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@ to start."
             <div class="nameTitle">AVIRAL GARG</div>
             <div class="nameSubTitle">SOFTWARE ENGINEER</div>
             <p>
-                <a href="https://drive.google.com/file/d/1OrhEGE7YZ8NeHqcXO9zxwoq4DNFKF7H6/view?usp=sharing"
-                   rel="noopener noreferrer" target="_blank">Resume</a>
-                &nbsp;|&nbsp;
                 <a href="https://www.linkedin.com/in/aviralgarg/" rel="noopener noreferrer" target="_blank">LinkedIn</a>
                 &nbsp;|&nbsp;
                 <a href="https://github.com/gaviral" rel="noopener noreferrer" target="_blank">GitHub</a>
             </p>
+            <div>
+                Personal projects:
+            </div>
             <table>
                 <tr>
                     <td>React-ChatBot</td>
