Fix link in index.html

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ to start."
             <table>
                 <tr>
                     <td>Kiara-Python</td>
-                    <td><a href="https://github.com/gaviral/Kiara" rel="noopener noreferrer"
+                    <td><a href="https://github.com/gaviral/Kiara-Python" rel="noopener noreferrer"
                            target="_blank">GitHub</a></td>
                     <td><a href="https://github.com/gaviral/Kiara-Python#voice-commands" rel="noopener noreferrer"
                            target="_blank">Command List</a></td>
