--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ to start."
                 &nbsp;|&nbsp;
                 <a href="https://github.com/gaviral" rel="noopener noreferrer" target="_blank">GitHub</a>
             </p>
-            <table>
+<!--             <table>
                 <tr>
                     <td>Kiara-Python</td>
                     <td><a href="https://github.com/gaviral/Kiara-Python" rel="noopener noreferrer"
@@ -117,7 +117,7 @@ to start."
                     <!--                    <td>Jetpack-Compose-->
                     <!--                    </td>-->
                 </tr>
-            </table>
+            </table> -->
             <p>
                 <!-- ChatBots similar to 2 created a T4G -->
                 <!-- Reference: <a href="http://www.getskeleton.com">Skeleton documentation</a>. -->
