refactor: reorganize DSA section in index.html; enhance clarity and structure of problem-solving strategies and interview processes

--- a/index.html
+++ b/index.html
@@ -19,46 +19,94 @@
     <!-- Wrap Markdown source in `.markmap` elements -->
     <div class="markmap">
         <script type="text/template">
-# DSA
-
-- **Intro**
-    - **Problem Solving**
-        - **Problem**
-            - **Definition**:
-                - Question w/ initially **unknown solution method**
-                - Initial state: **Cluelessness** (Expected/Natural)
-            - **Contrast: "Exercise"**
-                - Solution **method is known** upfront
-                    - *Example*: Large number multiplication (uses grade school arithmetic)
-                - Lacks **method mystery**
-                - May be time-consuming/error-prone, but *how* is clear
-            - **Approach**
-                - Requires: Sustained **Investigation**
-                - Mechanism: Deploying **Algorithm Design Strategies** (Computational Problem-Solving Strategies)
-                    - **Domain-Specific** (e.g., Math, Science, Computational)
-                    - **Computational Strategies (Primary)**
-                        - **Brute Force**
-                        - **Decrease & Conquer**
-                        - **Divide & Conquer**
-                        - **Transform & Conquer**
-    - **Coding Fluency**
-        - Ability to **fluently transform** designed algorithm into **working code**
-        - Corresponds to **Part 2** of Ideal Interview (Code Implementation)
-- **Technical Interview (Ideal)**
-    - **Goal**: Test ability on **unseen problems**
-        - Assess **Problem Solving** (Algorithm Design)
-        - Assess **Coding Skills** (Implementation)
-    - **Process**:
-        - Given **unseen problem**
-        - Candidate deploys **Algorithm Design Strategies**
-        - Result: Design **correct** & **efficient** algorithm
-    - **Structure**:
-        - **Part 1**: Design Algorithm (**Problem Solving**)
-        - **Part 2**: Code Algorithm (**Coding Fluency**)
-- **Sorting**
-    - **Focus**:
-        - Apply **Algorithm Design Strategies** to actual interview problems (sorting context)
-        - **Code** the resulting algorithms
+- **DSA**
+    - **Intro**
+        - **Problem Solving**
+            - **Problem**
+                - **Definition**:
+                    - Question w/ initially **unknown solution method**
+                    - Initial state: **Cluelessness** (Expected/Natural)
+                - **Contrast: "Exercise"**
+                    - Solution **method is known** upfront
+                        - *Example*: Large number multiplication (uses grade school arithmetic)
+                    - Lacks **method mystery**
+                    - May be time-consuming/error-prone, but *how* is clear
+                - **Approach**
+                    - Requires: Sustained **Investigation**
+                    - Mechanism: Deploying **Algorithm Design Strategies** (Computational Problem-Solving Strategies)
+                        - **Domain-Specific** (e.g., Math, Science, Computational)
+                        - **Computational Strategies (Primary)**
+                            - **Brute Force**
+                            - **Decrease & Conquer**
+                            - **Divide & Conquer**
+                            - **Transform & Conquer**
+        - **Coding Fluency**
+            - Ability to **fluently transform** designed algorithm into **working code**
+            - Corresponds to **Part 2** of Ideal Interview (Code Implementation)
+            - Developed via **repetitive use** of **coding patterns** for speed.
+    - **Technical Interview**
+        - **Goal**: Test ability on **unseen problems**
+            - Assess **Problem Solving** (Algorithm Design)
+            - Assess **Coding Skills** (Implementation)
+        - **Process**:
+            - Given **unseen problem**
+            - Candidate deploys **Algorithm Design Strategies**
+            - Result: Design **correct** & **efficient** algorithm
+        - **Structure**:
+            - **Part 1**: Design Algorithm (**Problem Solving**)
+            - **Part 2**: Code Algorithm (**Coding Fluency**)
+        - **Ideal vs. Real Tension**
+            - **Ideal**: Allows time for **sustained investigation**.
+            - **Real**: **Timed test** -> Causes **anxiety** (like math tests).
+                - **Resolving Tension (Approaches)**
+                    - **1. Memorization**
+                        - **Method**: Memorize all (1700+) solutions -> Treat problems as exercises (hash table lookup).
+                        - **Drawbacks**:
+                            - **Impractical**: Too many questions, requires excessive time.
+                            - **Fails on Unseen**: Companies (e.g., Google) use novel questions -> Risk of "brain freeze". (Prepares for best case, not worst).
+                            - **No Skill Growth**: Doesn't improve engineering fundamentals; waste of prep time.
+                    - **2. Develop Problem Solving (Recommended Approach)**
+                        - **Goal**: Become a better **problem solver**.
+                        - **Benefits**:
+                            - Develops **Inner Confidence**: Antidote to anxiety through practice on unseen problems. (Prevents "brain freeze")
+                            - Improves **Engineering Skills**: Solidifies fundamentals, useful on the job.
+                        - **Method**:
+                            - Practice solving **unseen** questions.
+                            - Exposure to **popular** interview questions.
+                            - Cluster questions by **Coding Patterns**.
+                                - **Definition**: Similar code structure/logic for related problems.
+                                - **Benefit**: Reinforces patterns -> Faster, non-scratch coding during implementation.
+                        - **Mindset Changes Required**:
+                            - **Increase Concentration Time**:
+                                - Resist quick lookups (5-10 min).
+                                - Spend **significant time** (1-1.5 hrs min, potentially more) on *one* problem.
+                                - If stuck: Break, sleep on it, revisit.
+                                - If still stuck: Use **minimal hints**, not full solutions.
+                            - **Embrace Failure & Iteration**:
+                                - Expect **dead ends** when trying strategies.
+                                - Backtrack & try other paths (nature of investigation).
+                                - **Don't get discouraged** by failure.
+                                - **Learn** from failed attempts ("Why didn't this work?").
+                                - Dead ends can be **stepping stones** to optimal solutions.
+                                - *Analogy*: Hiking - wrong trails lead to backtracking, finding new paths to the peak.
+                            - **Positive Emotional Attitude**:
+                                - Towards **unseen questions**.
+                                - *Analogy*: Problem Solving ≈ Hiking/Exploring (unknown, getting lost is part of it) vs. Exercises ≈ Gym (repetitive).
+                        - **Recommended Study Strategy**:
+                            - **First Pass (New Problem)**:
+                                - Focus: **Problem Solving** ONLY.
+                                - Ignore time constraints initially (lengthy encounter expected).
+                                - **AVOID** looking up solutions -> Build problem-solving muscles.
+                            - **Subsequent Passes (Revisiting)**:
+                                - Focus: **Coding Fluency**.
+                                - Goal: Implement known algorithm **quickly** (no mystery).
+                        - **Interview Behavior**:
+                            - Even for familiar problems (exercises): **Show problem-solving path** to interviewer.
+                            - Do not just retrieve solution from memory.
+    - **Sorting**
+        - **Focus**:
+            - Apply **Algorithm Design Strategies** to actual interview problems (sorting context)
+            - **Code** the resulting algorithms
 </script>
 </div>
 
